# ezGPX

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  dev_test.py  notes.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
dev_tests/: tests.ipynb
dev_tests/test_files/Garmin/: 29_04_2023.gpx  30_04_2023.gpx
dev_tests/test_files/Strava/: Derouillage_habituel.gpx
doc/: conf.py  description.rst  ezgpx.gpx_writer.rst  ezgpx.rst  ezgpx.utils.rst  index.rst  installation.rst  modules.rst
doc/tutorials/: index.rst  parsing.rst  plotting.rst  schemas.rst  writing.rst
docs/: conf.py  description.rst  ezgpx.gpx.rst  ezgpx.gpx_parser.rst  ezgpx.rst
docs/source/: conf.py  description.rst  index.rst  installation.rst
docs/source/api/: ezgpx.gpx_elements.rst  ezgpx.parser.fit_parser.rst  ezgpx.parser.gpx_parser.rst  ezgpx.parser.kml_parser.rst  ezgpx.parser.rst  ezgpx.parser.xml_parser.rst  ezgpx.parsers.rst  ezgpx.plotters.rst  ezgpx.rst  ezgpx.schemas.rst  ezgpx.utils.rst  ezgpx.writer.gpx_writer.rst  ezgpx.writer.kml_writer.rst  ezgpx.writer.rst  ezgpx.writers.rst  index.rst  modules.rst  tests.rst
docs/source/tutorials/: analysing.rst  index.rst  modifying.rst  parsing.rst  plotting.rst  schemas.rst  writing.rst
docs/tutorials/: modifying.rst  parsing.rst  plotting.rst  schemas.rst
examples/: check_schemas.py  complete_example.ipynb  conversion.py  new_file.csv  new_file.gpx  new_file.kml  plot.py  read_write.py  remove_data.py  remove_gps_errors.py  simplify.py
ezGPX/: __init__.py
ezGPX/gpx_elements/: __init__.py  gpx.py  metadata.py  track.py  track_point.py  track_segment.py
ezGPX/gpx_parser/: parser.py
ezGPX/gpx_writer/: writer.py
ezgpx/: __init__.py
ezgpx/constants/: precisions.py
ezgpx/fit_parser/: __init__.py  fit_parser.py
ezgpx/gpx/: __init__.py  gpx.py  utils.py
ezgpx/gpx_elements/: __init__.py  bounds.py  copyright.py  email.py  extensions.py  gpx.py  gpx_element.py  link.py  metadata.py  person.py  point.py  point_segment.py  route.py  track.py  track_extensions.py  track_point.py  track_segment.py  way_point.py  waypoint.py
ezgpx/gpx_parser/: __init__.py  gpx_parser.py  parser.py
ezgpx/gpx_writer/: gpx_writer.py  writer.py
ezgpx/kml_parser/: __init__.py  kml_parser.py
ezgpx/kml_writer/: __init__.py  kml_writer.py
ezgpx/parser/: __init__.py  parser.py
ezgpx/parser/fit_parser/: fit_parser.py
ezgpx/parser/gpx_parser/: gpx_parser.py
ezgpx/parser/kml_parser/: kml_parser.py
ezgpx/parser/xml_parser/: xml_parser.py
ezgpx/parsers/: __init__.py  fit_parser.py  gpx_parser.py  kml_parser.py  parser.py  xml_parser.py
ezgpx/plotters/: __init__.py  folium_plotter.py  gmap_plotter.py  gmplot_plotter.py  matplotlib_anim_plotter.py  matplotlib_plotter.py  plotly_anim_plotter.py  plotly_plotter.py  plotter.py
ezgpx/schemas/kml_2_2/: ogckml22.xsd
ezgpx/utils/: __init__.py  algorithms.py  distance.py  projections.py  schema.py
ezgpx/writer/: __init__.py  writer.py
ezgpx/writer/gpx_writer/: __init__.py  gpx_writer.py  gpx_writer_method_behavior_creator.py
ezgpx/writer/kml_writer/: kml_writer.py
ezgpx/writers/: __init__.py  gpx_writer.py  gpx_writer_method_behavior_creator.py  gpx_writer_method_creator.py  kml_writer.py  writer.py
ezgpx/xml_parser/: __init__.py  xml_parser.py
test_files/: garmin_etrex_1_test.gpx  square_2.gpx
test_files/files/: garmin_etrex32_hike_1.gpx  garmin_etrex32_hike_2.gpx  garmin_etrex32_hike_error_1_test.gpx  garmin_etrex_1_test.gpx  river_run.kmz  square_1.gpx  strava_run_2.gpx  strava_running_1.gpx  strava_running_1_test.gpx  strava_walk_1.gpx  strava_walk_1_test.gpx  ventalon_1.gpx
tests/: test_GPX.py  test_utils.py
tests/dev_tests/: tests.ipynb
tests/test_files/files/: Black_Forest_01_Baden.gpx  Black_Forest_02_Baden.gpx  VTTrack_1.gpx  alltrails_1.gpx  alltrails_2.gpx  invalid_schema.gpx  (+12 more)
tests/tmp/: strava_run_1_test.csv
(+4 files in other folders)
